wind-coding-conventions/fixtures/valid/sample-face/src/main/java/com/acme/order/service/OrderService.java
package com.acme.order.service;

import com.acme.order.model.dto.OrderDTO;

public interface OrderService {
    OrderDTO getOrderById(Long id);
}
