wind-coding-conventions/fixtures/invalid/sample-impl/src/main/java/com/acme/order/service/impl/BadOrderServiceImpl.java
package com.acme.order.service.impl;

public class BadOrderServiceImpl {

    void update(OrderMapper orderMapper, Object entity) {
        orderMapper.update(entity);
    }

    interface OrderMapper {
        void update(Object entity);
    }
}
